# SPDX-FileCopyrightText: © 2024 Matt Williams <matt.williams@bristol.ac.uk>
# SPDX-License-Identifier: CC0-1.0

[package]
name = "clifton"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = { version = "1.0.86", default-features = false, features = ["std"] }
clap = { version = "4.5.6", default-features = false, features = ["derive", "color", "help", "usage", "error-context", "suggestions", "env", "std", "string"] }
dirs = { version = "5.0.1", default-features = false }
http = { version = "1.1.0", default-features = false }
http-serde = { version = "2.1.1", default-features = false }
md-5 = { version = "0.10.6", default-features = false }
oauth2 = { version = "4.4.2", default-features = false, features = ["reqwest", "rustls-tls"] }
openssh-keys = { version = "0.6.4", default-features = false }
qrcode = { version = "0.14.1", default-features = false }
reqwest = { version = "0.11.0", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1.0.204", default-features = false }
serde_json = { version = "1.0.117", default-features = false }
ssh-key = { version = "0.6.6", default-features = false, features = ["std"] }
ssh2-config = { version = "0.2.3", default-features = false }
toml = { version = "0.8.14", default-features = false, features = ["parse"] }
url = { version = "2.5.0", default-features = false, features = ["serde"] }
webbrowser = { version = "1.0.1", default-features = false }

[build-dependencies]
built = { version = "0.7", default-features = false, features = ["git2"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
