# SPDX-FileCopyrightText: © 2024 Matt Williams <matt.williams@bristol.ac.uk>
# SPDX-License-Identifier: CC0-1.0

[package]
name = "clifton"
version = "0.1.2"
description = "An SSH connection manager"
edition = "2021"
build = "build.rs"
license = "MIT"
homepage = "https://github.com/isambard-sc/clifton/"
repository = "https://github.com/isambard-sc/clifton/"

[dependencies]
anyhow = { version = "1.0.86", default-features = false, features = ["std"] }
chrono = { version = "0.4.38", default-features = false, features = ["now"] }
clap = { version = "4.5", default-features = false, features = ["derive", "color", "help", "usage", "error-context", "suggestions", "env", "std", "string"] }
dirs = { version = "5.0.1", default-features = false }
http = { version = "1.1.0", default-features = false }
http-serde = { version = "2.1.1", default-features = false }
md-5 = { version = "0.10.6", default-features = false }
oauth2 = { version = "4.4.2", default-features = false, features = ["reqwest", "rustls-tls"] }
qrcode = { version = "0.14.1", default-features = false }
reqwest = { version = "0.11.0", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1.0.208", default-features = false }
serde_json = { version = "1.0", default-features = false }
shellexpand = { version = "3.1.0", default-features = false, features = ["base-0", "dirs", "path", "tilde"] }
ssh-key = { version = "0.6.6", default-features = false, features = ["std", "serde"] }
toml = { version = "0.8", default-features = false, features = ["parse"] }
url = { version = "2.5.0", default-features = false, features = ["serde"] }
webbrowser = { version = "1.0.1", default-features = false }

[build-dependencies]
built = { version = "0.7", default-features = false, features = ["git2"] }

[dev-dependencies]
mockito = "1.4.0"
ssh-key = { version = "0.6.6", default-features = false, features = ["ed25519", "rand_core"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[lints.rust]
unsafe_code = "forbid"
unused_crate_dependencies = "warn"

[lints.clippy]
dbg_macro = "deny"
unwrap_used = "deny"
expect_used = "deny"

[package.metadata.clippy]
allow-dbg-in-tests = true
